--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "pulse",
+  "name": "folder",
   "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
+  "description": "Описание проекта",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run serve",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js",
+    "serve": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexanderSoldatenkov/work.git"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.26.12",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.2.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.1.0"
+  "bugs": {
+    "url": "https://github.com/AlexanderSoldatenkov/work/issues"
   },
-  "browserslist": [
-    "last 1 version",
-    "> 1%",
-    "maintained node versions",
-    "not dead"
-  ]
+  "homepage": "https://github.com/AlexanderSoldatenkov/work#readme",
+  "devDependencies": {
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
