--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Описание проекта",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "npm run serve",
+    "starter": "npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "serve": "webpack serve"
+    "builder": "webpack --config webpack.config.js",
+    "serve": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "start": "cross-env NODE_ENV=development webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -20,8 +23,41 @@
   },
   "homepage": "https://github.com/AlexanderSoldatenkov/work#readme",
   "devDependencies": {
-    "webpack": "^5.71.0",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
+    "imagemin-webpack": "^2.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
+    "stylelint": "^14.6.1",
+    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "focus-visible": "^5.2.0",
+    "http-proxy-middleware": "^2.0.4",
+    "jquery": "^3.6.0"
   }
 }
